--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platform Racer</title>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first .ref("Flag Folder")-->
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -27,6 +27,7 @@
         <h1>Your name: <input type="text" id="name"></h1>
         <button id="submit-btn">Submit</button>
     </section>
+    <section id="secret"></section>
     <section id="high-scores">
         <h2>Top Scores From Around The World:</h2>
     </section>
